# ARIAC-Competition

./: CMakeLists.txt  setup.py
config/: figment_gear_conf.yaml  figment_gear_conf.yaml.orig
figment_team/: build_team_system.bash  run_team_system.bash  team_config.yaml
script/: figment_ariac_node.py
script/gprt/: constants.py  control.py  tf_manager.py
src/figment_ariac/: scheduler_plan.py
src/figment_ariac/deprecated/: actions.py
src/figment_ariac/gprt/: actions.py  arm_actions.py  competition.py  constants.py  constants.py.orig  execution.py  execution.py.orig  global_vars.py  gripper_actions.py  ik_solution.py  order_utils.py  scheduler.py  scheduler.py.orig  tf_manager.py  tf_manager.py.orig  transform.py  utils.py
